# NeobankServer

./: .gitignore  CMakeLists.txt
certificates/: server.crt  server.key
config/: database.json
src/: application.cpp  application.h  main.cpp  readme.md  test3.cpp  test3.h  tests2.cpp  tests2.h
src/business/processors/: paymentprocessor.cpp  paymentprocessor.h  transactionprocessor.cpp  transactionprocessor.h
src/business/services/: accountservice.cpp  accountservice.h  reportservice.cpp  reportservice.h  transactionservice.cpp  transactionservice.h
src/common/: constants.h  converters.h  serializers.h  utils.h
src/context/: connectioncontext.h  context.cpp  context.h  contextwrapper.cpp  contextwrapper.h  messagecontext.cpp  messagecontext.h  session.h  sessioncontext.cpp  sessioncontext.h  user.h  usercontext.h
src/core/: applicationserver.cpp  applicationserver.h  servermanager.cpp
src/database/: databasemanager.cpp  databasemanager.h  dbconnection.cpp  dbconnection.h  dbmanager.cpp  dbmanager.h
src/database/models/: account.h  auditlogentry.h  authsession.h  transaction.cpp  transaction.h  user.h
src/database/repositories/: accountrepository.cpp  accountrepository.h  auditlogrepository.cpp  auditlogrepository.h  authsessionrepository.cpp  authsessionrepository.h  transactionrepository.cpp  transactionrepository.h  userrepository.cpp  userrepository.h
src/endpoint/: accountcreate.cpp  accountcreate.h  accountdelete.cpp  accountdelete.h  accountlist.cpp  accountlist.h  creditcreate.cpp  creditcreate.h  exchange.cpp  exchange.h  iendpoint.h  login.cpp  login.h  register.cpp  register.h  transactionbefore.cpp  transactionbefore.h  transactioncreate.cpp  transactioncreate.h  transactionlist.cpp  transactionlist.h
src/httpserver/: httpserver.h
src/middleware/: authentification.cpp  authentification.h  authorization.cpp  authorization.h  endpointinvoker.cpp  endpointinvoker.h  exception.h  imiddleware.h  logger.h  router.cpp  router.h  session.h
src/network/: sessionmanager.cpp  sessionmanager.h  socketwrapper.cpp  socketwrapper.h  sslservermanager.cpp  sslservermanager.h  transportlayer.cpp  transportlayer.h
src/network/protocols/: bankingprotocol.cpp  bankingprotocol.h  messageparser.cpp  messageparser.h  protocolvalidator.cpp  protocolvalidator.h
src/network/sessions/: clientsession.cpp  clientsession.h  sessionmanager.cpp  sessionmanager.h  socketsession.cpp  socketsession.h  socketwrapper.cpp  socketwrapper.h
src/network/ssl/: certificatemanager.cpp  certificatemanager.h  sslmanager.cpp  sslmanager.h  sslservermanager.cpp  sslservermanager.h
src/pipeline/: middleware.h  pipeline.cpp  pipeline.h  pipelinebuilder.cpp  pipelinebuilder.h
src/security/audit/: auditlogger.cpp  auditlogger.h  auditor.cpp  auditor.h
src/security/authentification/: authmanager.cpp  authmanager.h  loginmanager.cpp  loginmanager.h  passwordresetmanager.cpp  passwordresetmanager.h  registermanager.cpp  registermanager.h  tokenmanager.cpp  tokenmanager.h
src/security/certificates/: certificatemanager.cpp
src/security/ddos/: ddosmanager.cpp  ddosmanager.h
src/security/encryption/: aesencryptor.cpp  aesencryptor.h  hashing.cpp  hashing.h
src/service/: accountservice.cpp  accountservice.h  authentification.cpp  authentification.h  comission.cpp  comission.h  currencyexchange.cpp  currencyexchange.h  iservice.cpp  iservice.h  loggerservice.cpp  loggerservice.h  service.cpp  service.h  session.h  transactionservice.cpp  transactionservice.h
